apps/authelia/middleware-strip-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-strip-auth
  namespace: authelia
spec:
  stripPrefix:
    prefixes:
      - /auth
