apps/authelia/manifest-authelia.yaml
---
# Source: authelia/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
  labels: 
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/version: 4.39.24
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: authelia-0.11.22
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  

---
# Source: authelia/templates/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: authelia
  namespace: authelia
  labels: 
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/version: 4.39.24
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: authelia-0.11.22
spec:
  selector:
    matchLabels: 
      app.kubernetes.io/name: authelia
      app.kubernetes.io/instance: authelia
  revisionHistoryLimit: 5
  minReadySeconds: 0
  updateStrategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 25%
  template:
    metadata:
      labels: 
        app.kubernetes.io/name: authelia
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/version: 4.39.24
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: authelia-0.11.22
      annotations:
        authelia.com/checksum-config: b1eebc6ad8e3170ced35c95cd120cb1d1d1e6c43f43f5f400cdb79a97fd09679
        
    spec:
      hostNetwork: false
      hostPID: false
      hostIPC: false
      affinity: 
        nodeAffinity: {}
        podAffinity: {}
        podAntiAffinity: {}
      enableServiceLinks: false
      containers:
      - name: authelia
        image: ghcr.io/authelia/authelia:4.39.24
        imagePullPolicy: IfNotPresent
        command:
        - 'authelia'
        resources: 
          limits: {}
          requests: {}
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /api/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        volumeMounts:
        - name: authelia
          mountPath: /config
          readOnly: false
        - name: config
          mountPath: /configuration.yaml
          subPath: configuration.yaml
          readOnly: true
        - name: secrets
          mountPath: /secrets/internal
          readOnly: true
      volumes:
      - name: authelia
        emptyDir:
          sizeLimit: 100Mi
      - name: config
        configMap:
          name: authelia
          items:
          - key: configuration.yaml
            path: configuration.yaml
      - name: secrets
        secret:
          secretName: authelia-secrets
          items:
          - key: identity_validation.reset_password.jwt.hmac.key
            path: identity_validation.reset_password.jwt.hmac.key
          - key: session.encryption.key
            path: session.encryption.key
          - key: storage.encryption.key
            path: storage.encryption.key
