apps/authelia/ingress-authelia.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia-strip-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: k3s-control-plane-1.tail783ccb.ts.net
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 80
